# pyhmfd

./: .gitignore  404.html  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api-reference/: index.html
docs/: api-reference.md  getting-started.md  hfd.md  hmd.md  index.md  multi-country.md  other-databases.md
getting-started/: index.html
hfd/: index.html
hmd/: index.html
multi-country/: index.html
other-databases/: index.html
pyhmd/: __init__.py  chmd.py  hfc.py  hfd.py  hmd.py  jmd.py  utils.py
pyhmfd/: __init__.py  auth.py  chmd.py  hfc.py  hfd.py  hmd.py  jmd.py  multi.py  parsers.py
search/: search_index.json
tests/: test_hfd.py  test_hmd.py  test_multi.py  test_parsers.py
